Fix crash in KJob dialogs.

Guard "this" being deleted whilst running new eventloop

KMessageBox spawns a new event loop, during which the parent kjob can be
completed and deleted, deleting the UIDelegate with it.

BUG: 356321
BUG: 356964
BUG: 355052
BUG: 355525
BUG: 353462
BUG: 358954
BUG: 346215
REVIEW: 126999